# office-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEMO_TEST_PLAN.md  README.md  SECURITY.md  pyproject.toml  setup.sh
.claude/skills/calendar/: SKILL.md
.claude/skills/calendar-setup/: SKILL.md
.claude/skills/check-availability/: SKILL.md
.claude/skills/find-time/: SKILL.md
.claude/skills/schedule-meeting/: SKILL.md
.github/workflows/: ci.yml
src/office_assistant/: __main__.py  app.py  auth.py  graph_client.py  server.py  setup.py
src/office_assistant/tools/: _helpers.py  availability.py  calendars.py  events.py  rooms.py
tests/: conftest.py  test_auth.py  test_availability.py  test_calendars.py  test_events.py  test_graph_client.py  test_helpers.py  test_integration_flows.py  test_rooms.py
